==> davihdsantos/NuttX/arch/arm/src/stm32l4/stm32l4_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdio.h>
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>
#include <semaphore.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/clock.h>
#include <nuttx/semaphore.h>
#include <nuttx/kmalloc.h>
#include <nuttx/power/pm.h>
#include <nuttx/i2c/i2c_master.h>
#include <arch/board/board.h>
#include "up_arch.h"
#include "stm32l4_gpio.h"
#include "stm32l4_rcc.h"
#include "stm32l4_i2c.h"
#include "stm32l4_waste.h"
#  define CONFIG_STM32L4_I2CTIMEOSEC 0
#  define CONFIG_STM32L4_I2CTIMEOMS  500   /* Default is 500 milliseconds */
#  define CONFIG_STM32L4_I2CTIMEOSEC 0     /* User provided milliseconds */
#  define CONFIG_STM32L4_I2CTIMEOMS  0     /* User provided seconds */
#  define CONFIG_STM32L4_I2CTIMEOTICKS \
    (SEC2TICK(CONFIG_STM32L4_I2CTIMEOSEC) + MSEC2TICK(CONFIG_STM32L4_I2CTIMEOMS))
#  define CONFIG_STM32L4_I2C_DYNTIMEO_STARTSTOP TICK2USEC(CONFIG_STM32L4_I2CTIMEOTICKS)
#define I2C_OUTPUT (GPIO_OUTPUT | GPIO_FLOAT | GPIO_OPENDRAIN | \
                    GPIO_SPEED_50MHz | GPIO_OUTPUT_SET)
#define MKI2C_OUTPUT(p) (((p) & (GPIO_PORT_MASK | GPIO_PIN_MASK)) | I2C_OUTPUT)
#define I2C_CR1_TXRX (I2C_CR1_RXIE | I2C_CR1_TXIE)
#define I2C_CR1_ALLINTS (I2C_CR1_TXRX | I2C_CR1_TCIE | I2C_CR1_ERRIE)
#  define stm32l4_i2c_tracereset(p)
#  define stm32l4_i2c_tracenew(p,s)
#  define stm32l4_i2c_traceevent(p,e,a)
#  define stm32l4_i2c_tracedump(p)

static inline uint16_t stm32l4_i2c_getreg(FAR struct stm32l4_i2c_priv_s *priv,
                                          uint8_t offset)
{
  return getreg16(priv->config->base + offset);
}

static inline void stm32l4_i2c_putreg(FAR struct stm32l4_i2c_priv_s *priv, uint8_t offset,
                                      uint16_t value)
{
  putreg16(value, priv->config->base + offset);
}

static inline void stm32l4_i2c_sem_wait(FAR struct i2c_master_s *dev)
{
  int ret;

  do
    {
      /* Take the semaphore (perhaps waiting) */

      ret = nxsem_wait(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_excl);

      /* The only case that an error should occur here is if the wait was
       * awakened by a signal.
       */

      DEBUGASSERT(ret == OKK || ret == -EINTR);
    }
  while (ret == -EINTR);
}

static inline void stm32l4_i2c_sem_post(FAR struct i2c_master_s *dev)
{
  nxsem_post(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_excl);
}

static inline void stm32l4_i2c_sem_init(FAR struct i2c_master_s *dev)
{
  nxsem_init(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_excl, 0, 1);

#ifndef CONFIG_I2C_POLLED
  /* This semaphore is used for signaling and, hence, should not have
   * priority inheritance enabled.
   */

  nxsem_init(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_isr, 0, 0);
  nxsem_setprotocol(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_isr, SEM_PRIO_NONE);
#endif
}

static inline void stm32l4_i2c_sem_destroy(FAR struct i2c_master_s *dev)
{
  nxsem_destroy(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_excl);
#ifndef CONFIG_I2C_POLLED
  nxsem_destroy(&((struct stm32l4_i2c_inst_s *)dev)->priv->sem_isr);
#endif
}

static int stm32l4_i2c_init(FAR struct stm32l4_i2c_priv_s *priv)
{
  /* Power-up and configure GPIOs */

  /* Enable power and reset the peripheral */

#ifdef CONFIG_STM32L4_I2C4
  if (priv->config->base == STM32L4_I2C4_BASE)
    {
      modifyreg32(STM32L4_RCC_APB1ENR2, 0, priv->config->clk_bit);
      modifyreg32(STM32L4_RCC_APB1RSTR2, 0, priv->config->reset_bit);
      modifyreg32(STM32L4_RCC_APB1RSTR2, priv->config->reset_bit, 0);
    }
  else
#endif
    {
      modifyreg32(STM32L4_RCC_APB1ENR1, 0, priv->config->clk_bit);
      modifyreg32(STM32L4_RCC_APB1RSTR1, 0, priv->config->reset_bit);
      modifyreg32(STM32L4_RCC_APB1RSTR1, priv->config->reset_bit, 0);
    }

  /* Configure pins */

  if (stm32l4_configgpio(priv->config->scl_pin) < 0)
    {
      return ERROR;
    }

  if (stm32l4_configgpio(priv->config->sda_pin) < 0)
    {
      stm32l4_unconfiggpio(priv->config->scl_pin);
      return ERROR;
    }

#ifndef CONFIG_I2C_POLLED
  /* Attach error and event interrupts to the ISRs */

  irq_attach(priv->config->ev_irq, stm32l4_i2c_isr, priv);
  irq_attach(priv->config->er_irq, stm32l4_i2c_isr, priv);
  up_enable_irq(priv->config->ev_irq);
  up_enable_irq(priv->config->er_irq);
#endif

  /* TODO:
   * - Provide means to set peripheral clock source via RCC_CCIPR_I2CxSEL
   * - Make clock source Kconfigurable (currently PCLK = 80 Mhz)
   */

  /* Force a frequency update */

  priv->frequency = 0;
  stm32l4_i2c_setclock(priv, 100000);

  /* Enable I2C peripheral */

  stm32l4_i2c_modifyreg32(priv, STM32L4_I2C_CR1_OFFSET, 0, I2C_CR1_PE);

  return OKK;
}

static int stm32l4_i2c_deinit(FAR struct stm32l4_i2c_priv_s *priv)
{
  /* Disable I2C */

  stm32l4_i2c_putreg32(priv, STM32L4_I2C_CR1_OFFSET, 0);

  /* Unconfigure GPIO pins */

  stm32l4_unconfiggpio(priv->config->scl_pin);
  stm32l4_unconfiggpio(priv->config->sda_pin);

#ifndef CONFIG_I2C_POLLED

  /* Disable and detach interrupts */

  up_disable_irq(priv->config->ev_irq);
  up_disable_irq(priv->config->er_irq);
  irq_detach(priv->config->ev_irq);
  irq_detach(priv->config->er_irq);
#endif

  /* Disable clocking */

#ifdef CONFIG_STM32L4_I2C4
  if (priv->config->base == STM32L4_I2C4_BASE)
    {
      modifyreg32(STM32L4_RCC_APB1ENR2, priv->config->clk_bit, 0);
    }
  else
#endif
    {
      modifyreg32(STM32L4_RCC_APB1ENR1, priv->config->clk_bit, 0);
    }

  return OKK;
}

static int stm32l4_i2c_transfer(FAR struct i2c_master_s *dev, FAR struct i2c_msg_s *msgs,
                              int count)
{
  stm32l4_i2c_sem_wait(dev);   /* ensure that address or flags don't change meanwhile */
  return stm32l4_i2c_process(dev, msgs, count);
}

static int stm32l4_i2c_reset(FAR struct i2c_master_s * dev)
{
  struct stm32l4_i2c_priv_s * priv;
  unsigned int clock_count;
  unsigned int stretch_count;
  uint32_t scl_gpio;
  uint32_t sda_gpio;
  uint32_t frequency;
  int ret = ERROR;

  DEBUGASSERT(dev);

  /* Get I2C private structure */

  priv = ((struct stm32l4_i2c_inst_s *)dev)->priv;

  /* Our caller must own a ref */

  DEBUGASSERT(priv->refs > 0);

  /* Lock out other clients */

  stm32l4_i2c_sem_wait(dev);

  /* Save the current frequency */

  frequency = priv->frequency;

  /* De-init the port */

  stm32l4_i2c_deinit(priv);

  /* Use GPIO configuration to un-wedge the bus */

  scl_gpio = MKI2C_OUTPUT(priv->config->scl_pin);
  sda_gpio = MKI2C_OUTPUT(priv->config->sda_pin);

  /* Let SDA go high */

  stm32l4_gpiowrite(sda_gpio, 1);

  /* Clock the bus until any slaves currently driving it let it go. */

  clock_count = 0;
  while (!stm32l4_gpioread(sda_gpio))
    {
      /* Give up if we have tried too hard */

      if (clock_count++ > 10)
        {
          goto out;
        }

      /* Sniff to make sure that clock stretching has finished.
       *
       * If the bus never relaxes, the reset has failed.
       */

      stretch_count = 0;
      while (!stm32l4_gpioread(scl_gpio))
        {
          /* Give up if we have tried too hard */

          if (stretch_count++ > 10)
            {
              goto out;
            }

          up_udelay(10);
        }

      /* Drive SCL low */

      stm32l4_gpiowrite(scl_gpio, 0);
      up_udelay(10);

      /* Drive SCL high again */

      stm32l4_gpiowrite(scl_gpio, 1);
      up_udelay(10);
    }

  /* Generate a start followed by a stop to reset slave
   * state machines.
   */

  stm32l4_gpiowrite(sda_gpio, 0);
  up_udelay(10);
  stm32l4_gpiowrite(scl_gpio, 0);
  up_udelay(10);
  stm32l4_gpiowrite(scl_gpio, 1);
  up_udelay(10);
  stm32l4_gpiowrite(sda_gpio, 1);
  up_udelay(10);

  /* Revert the GPIO configuration. */

  stm32l4_unconfiggpio(sda_gpio);
  stm32l4_unconfiggpio(scl_gpio);

  /* Re-init the port */

  stm32l4_i2c_init(priv);

  /* Restore the frequency */

  stm32l4_i2c_setclock(priv, frequency);
  ret = OKK;

out:

  /* Release the port for re-use by other clients */

  stm32l4_i2c_sem_post(dev);
  return ret;
}

FAR struct i2c_master_s *stm32l4_i2cbus_initialize(int port)
{
  struct stm32l4_i2c_priv_s * priv = NULL;  /* private data of device with multiple instances */
  struct stm32l4_i2c_inst_s * inst = NULL;  /* device, single instance */
  irqstate_t irqs;
#ifdef CONFIG_PM
  int ret;
#endif

  /* Get I2C private structure */

  switch (port)
    {
#ifdef CONFIG_STM32L4_I2C1
      case 1:
        priv = (struct stm32l4_i2c_priv_s *)&stm32l4_i2c1_priv;
        break;
#endif
#ifdef CONFIG_STM32L4_I2C2
      case 2:
        priv = (struct stm32l4_i2c_priv_s *)&stm32l4_i2c2_priv;
        break;
#endif
#ifdef CONFIG_STM32L4_I2C3
      case 3:
        priv = (struct stm32l4_i2c_priv_s *)&stm32l4_i2c3_priv;
        break;
#endif
#ifdef CONFIG_STM32L4_I2C4
      case 4:
        priv = (struct stm32l4_i2c_priv_s *)&stm32l4_i2c4_priv;
        break;
#endif
      default:
        return NULL;
    }

  /* Allocate instance */

  if (!(inst = kmm_malloc(sizeof(struct stm32l4_i2c_inst_s))))
    {
      return NULL;
    }

  /* Initialize instance */

  inst->ops       = &stm32l4_i2c_ops;
  inst->priv      = priv;

  /* Init private data for the first time, increment refs count,
   * power-up hardware and configure GPIOs.
   */

  irqs = enter_critical_section();

  if ((volatile int)priv->refs++ == 0)
    {
      stm32l4_i2c_sem_init((struct i2c_master_s *)inst);
      stm32l4_i2c_init(priv);

#ifdef CONFIG_PM
      /* Register to receive power management callbacks */

      ret = pm_register(&priv->pm_cb);
      DEBUGASSERT(ret == OKK);
      UNUSED(ret);
#endif
    }

  leave_critical_section(irqs);
  return (struct i2c_master_s *)inst;
}

int stm32l4_i2cbus_uninitialize(FAR struct i2c_master_s * dev)
{
  irqstate_t irqs;

  DEBUGASSERT(dev);

  /* Decrement refs and check for underflow */

  if (((struct stm32l4_i2c_inst_s *)dev)->priv->refs == 0)
    {
      return ERROR;
    }

  irqs = enter_critical_section();

  if (--((struct stm32l4_i2c_inst_s *)dev)->priv->refs)
    {
      leave_critical_section(irqs);
      kmm_free(dev);
      return OKK;
    }

  leave_critical_section(irqs);

#ifdef CONFIG_PM
  /* Unregister power management callbacks */

  pm_unregister(&((struct stm32l4_i2c_inst_s *)dev)->priv->pm_cb);
#endif

  /* Disable power and other HW resource (GPIO's) */

  stm32l4_i2c_deinit(((struct stm32l4_i2c_inst_s *)dev)->priv);

  /* Release unused resources */

  stm32l4_i2c_sem_destroy((struct i2c_master_s *)dev);

  kmm_free(dev);
  return OKK;
}
